tests/openmp_vv/5.1/error/test_error_at_execution.c
#pragma omp parallel
#pragma omp single
#pragma omp error at(execution) severity(warning)
#pragma omp target map (from: _ompvv_isOffloadingOn)
